k8s-guide/chapter2/healthcheck-httpget.yaml
apiVersion: v1
kind: Pod
metadata:
  name: healthcheck-httpget
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
    livenessProbe:
      httpGet:
        path: /_status/healthz
        port: 80
      initialDelaySeconds: 30
      timeoutSeconds: 1
