k8s-guide/chapter2/healthcheck-tcpsocket.yaml
apiVersion: v1
kind: Pod
metadata:
  name: healthcheck-tcpsocket
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
    livenessProbe:
      tcpSocket:
        port: 80
      initialDelaySeconds: 30
      timeoutSeconds: 1
